# legal-docs-tldr

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.circleci/: config.yml
.github/workflows/: test.yml
core/: requirements.txt
core/data_handler/: tosdr.py
core/data_preprocessor/: tosdr.py
core/data_processor/: tosdr.py
core/tests/: cases.py  parser.py
core/tests/data_handler/: test_tosdr_data_handler.py
core/tests/data_processor/: test_tosdr.py
core/utils/: _typing.py  generic_utils.py  logging_utils.py  parser.py
legal_docs_tldr/data_preprocessing/: tosdr.py
legal_docs_tldr/utils/: generic_utils.py  logging_utils.py
scripts/: download_tosdr_data.sh
src/data/: base_client.py
src/data/api/: client.py
src/data/api/tosdr/: client.py  models.py
src/data/tosdr/: __init__.py  __main__.py  api_client.py  client.py  edit_site_client.py  html_parser.py  models.py
src/data_handler/: tosdr.py
src/utils/: _typing.py  file.py  file_utils.py  generic_utils.py  logging_utils.py  parser.py  paths.py
tests/: __init__.py  cases.py  conftest.py  parser.py  results.py
tests/api/: test_base_client.py  test_client.py  test_tosdr.py
tests/data/: test_base_client.py  test_tosdr.py  test_tosdr_html_parser.py
tests/data/tosdr/: test_edit_site_client.py  test_html_parser.py
tests/data_handler/: test_tosdr_data_handler.py
tests/io/in/tosdr_services/: github.json  nvidia.json
tests/resources/: example_bad_case.html
tests/utils/: test_file_utils.py
